--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ."
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "discord.js": "^12.5.1",
-    "nodemon": "^2.0.7"
+    "discord.js": "^12.5.1"
   }
 }
